--- a/src/main/features/claim/views/macro/about-claim-widget.njk
+++ b/src/main/features/claim/views/macro/about-claim-widget.njk
@@ -17,7 +17,7 @@
   <ul class="font-xsmall list">
     <li>
       <strong class="bold">{{ t(otherPartyLabel) }}</strong>
-      <a class="block" {{ internalLink(t(otherPartyName), DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId })) }}</a>
+      <div class="block"> {{ internalLink(otherPartyName, DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId })) }}</div>
     </li>
     <li>
       <strong class="bold">{{ t('Claim amount:') }}</strong>
