--- a/src/main/public/stylesheets/application.scss
+++ b/src/main/public/stylesheets/application.scss
@@ -26,6 +26,7 @@ $path: '/img/lib/';
 @import 'components/expandable-content';
 @import 'components/offer-table';
 @import 'components/income-expense-source';
+@import 'components/summary-table';
 
 .notice {
   margin-bottom: 1.5rem;
