ROC-3619: adding feature toggle and addressing review comments

--- a/src/main/features/claim/views/feature-permission.njk
+++ b/src/main/features/claim/views/feature-permission.njk
@@ -35,6 +35,7 @@
 
 
       {{ saveAndContinueButton() }}
+      <a href="{{ nextPage }}" class="button analytics-click-event-trigger" data-event-label="NewFeatureConsent: User consent provided">{{ t('Continue') }}</a>
     </form>
   </div>
 </div>
