--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -111,6 +111,20 @@
 
     {{ tableEnd() }}
 
+    {{ tableStart('judgmentRequest', 'Judgment request') }}
+
+      {{ row('Has the defendant paid some of the amount owed?',
+      draft.paidAmount.option.value | capitalize, changeLink = paidAmountUrl, bottomBorder = false, bold = true) }}
+
+      {% if draft.paidAmount.amount %}
+        {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = false, bold = true) }}
+      {% endif %}
+
+      {{ row('Amount to be paid by defendant', amountToBePaid | numeral, bold = true) }}
+
+    {{ tableEnd() }}
+
+
     {{ submitButton('Submit response') }}
 
   </form>
