--- a/src/main/features/claim/views/new-features-consent.njk
+++ b/src/main/features/claim/views/new-features-consent.njk
@@ -7,7 +7,7 @@
 <div class="grid-row">
   <div class="column-two-thirds">
     <p>{{ t('We’re continuously adding new features to this digital service. You can choose to try these features as we launch them') }}</p>
-    <form method="POST" novalidate class="analytics-click-event-trigger" data-event-label="FeatureConsent: User given consent about new features">
+    <form method="POST" novalidate class="analytics-click-event-trigger" data-event-label="New features consent">
       {{ csrfProtection(csrf) }}
 
       {{
