--- a/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
+++ b/src/main/features/claimant-response/views/macro/termsOfAgreementTable.njk
@@ -17,7 +17,7 @@
           firstPaymentDate: response.paymentIntention.repaymentPlan.firstPaymentDate | date
         }
       )) }}
-      {{ row('Completion date', paymentPlan.getLastPaymentDate() | date) }}
+      {{ row('Completion date', paymentPlan.getLastPaymentDate(response.paymentIntention.repaymentPlan.firstPaymentDate) | date) }}
     {% endif %}
 
   </fieldset>
