--- a/src/main/features/claimant-response/views/macro/paymentPlanTable.njk
+++ b/src/main/features/claimant-response/views/macro/paymentPlanTable.njk
@@ -3,7 +3,8 @@
     <legend>
       <span class="visually-hidden">{{ t( 'Payment plan' ) }}</span>
     </legend>
-    {{ row('Monthly installment of', instalmentAmount | numeral) }}
+    {{ row('Regular payments of', instalmentAmount | numeral) }}
+    {{ row('Frequency of payments', paymentFrequency | numeral) }}
     {{ row('Make the first payment on', firstPaymentDate | date) }}
     {{ row('Last payment on', lastPaymentOn | date) }}
     {{ row('Length of repayment plan', lengthOfPayment) }}
