--- a/src/main/common/components/ccj/views/paid-amount-summary.njk
+++ b/src/main/common/components/ccj/views/paid-amount-summary.njk
@@ -43,7 +43,6 @@
             <span class="font-small">{{ claim.claimData.feeAmountInPennies | pennies2pounds | numeral }}</span>
           </td>
         </tr>
-
         {% if alreadyPaid %}
         <tr>
           <th scope="col" class="bold-small">{{ t('Sub total') }}</th>
@@ -65,9 +64,9 @@
       </table>
     </div>
 
-    <div class="form-group">
-      <a class="button" href="{{nextPageUrl}}">{{ t('Continue') }}</a>
-    </div>
+    {#<div class="form-group">#}
+      {#<a class="button" href="{{nextPageUrl}}">{{ t('Continue') }}</a>#}
+    {#</div>#}
   </div>
 </div>
 {% endblock %}
