Added two utility functions to calculate montly regular income and expense

--- a/src/main/views/macro/financialDetails.njk
+++ b/src/main/views/macro/financialDetails.njk
@@ -109,7 +109,7 @@
 {% macro monthlyIncomesSection(incomes) %}
   {% if incomes %}
     {% for income in incomes %}
-      {{ row(label = income.type | renderIncomeType | capitalize, value = income.amountReceived | numeral, bottomBorder = loop.index0 === incomes.length - 1) }}
+      {{ row(label = income.type | renderIncomeType | capitalize, value = income.amount | numeral, bottomBorder = loop.index0 === incomes.length - 1) }}
     {% endfor %}
   {% else %}
     {{ row(label = 'Do they receive any income?', value = 'No', bottomBorder = true) }}
@@ -119,7 +119,7 @@
 {% macro monthlyExpensesSection(expenses) %}
   {% if expenses %}
     {% for expense in expenses %}
-      {{ row(label = expense.type | renderExpenseType | capitalize, value = expense.amountPaid | numeral, bottomBorder = loop.index0 === expenses.length - 1) }}
+      {{ row(label = expense.type | renderExpenseType | capitalize, value = expense.amount | numeral, bottomBorder = loop.index0 === expenses.length - 1) }}
     {% endfor %}
   {% else %}
     {{ row(label = 'Do they pay any expenses?', value = 'No', bottomBorder = true) }}
