--- a/src/main/features/claimant-response/views/payment-plan.njk
+++ b/src/main/features/claimant-response/views/payment-plan.njk
@@ -1,5 +1,5 @@
 {% extends "layout.njk" %}
-{% from "form.njk" import linkButton, saveAndContinueButton, errorSummary, csrfProtection, radioGroup, poundInput, textArea %}
+{% from "form.njk" import linkButton, saveAndContinueButton, errorSummary, csrfProtection, radioOption, poundInput, textArea %}
 {% from "date.njk" import dateInput %}
 {% from "financialDetails.njk" import financialDetailsTable %}
 
@@ -29,33 +29,48 @@
       <div class="form-group">
         <fieldset>
           <legend class="visually-hidden">{{ t('Regular payments of') }}</legend>
-          {{ poundInput('Regular payments of:', 'instalmentAmount', form, 'For example, £10', bold = true) }}
+          {{ poundInput('Regular payments of', 'instalmentAmount', form, 'For example, £10', bold = true) }}
         </fieldset>
       </div>
 
       <div class="form-group">
-        {{ radioGroup(
-        form = form,
-        label = 'How often do you want to receive payments?',
-        name = 'paymentSchedule',
-        options = [
-        {
-          label: PaymentSchedule.EACH_WEEK.displayValue,
-          value: PaymentSchedule.EACH_WEEK.value,
-          checked: form.valueFor('paymentSchedule') === PaymentSchedule.EACH_WEEK
-        },
-        {
-          label: PaymentSchedule.EVERY_TWO_WEEKS.displayValue,
-          value: PaymentSchedule.EVERY_TWO_WEEKS.value,
-          checked: form.valueFor('paymentSchedule') === PaymentSchedule.EVERY_TWO_WEEKS
-        },
-        {
-          label: PaymentSchedule.EVERY_MONTH.displayValue,
-          value: PaymentSchedule.EVERY_MONTH.value,
-          checked: form.valueFor('paymentSchedule') === PaymentSchedule.EVERY_MONTH
-        }
-        ]
-        ) }}
+        {% set error = form.errorFor('paymentSchedule') %}
+        <div class="form-group {% if error %} form-group-error {% endif %}">
+          <fieldset id="paymentSchedule[label]">
+            <legend>
+              <span class="form-label-bold">{{ t('How often do you want to receive payments?') }}</span>
+              <span class="form-hint">{{ t('The payment frequency is set by the defendant, but if the plan is set by a judge they will consider your preferred frequency.') }}</span>
+              {% if error %}<span class="error-message">{{ t(error) }}</span>{% endif %}
+            </legend>
+
+            {{ radioOption(
+              form = form,
+              name = 'paymentSchedule',
+              label = PaymentSchedule.EACH_WEEK.displayValue,
+              value = PaymentSchedule.EACH_WEEK.value,
+              checked = form.valueFor('paymentSchedule') === PaymentSchedule.EACH_WEEK,
+              bold = true
+            ) }}
+
+            {{ radioOption(
+              form = form,
+              name = 'paymentSchedule',
+              label = PaymentSchedule.EVERY_TWO_WEEKS.displayValue,
+              value = PaymentSchedule.EVERY_TWO_WEEKS.value,
+              checked = form.valueFor('paymentSchedule') === PaymentSchedule.EVERY_TWO_WEEKS,
+              bold = true
+            ) }}
+
+            {{ radioOption(
+              form = form,
+              name = 'paymentSchedule',
+              label = PaymentSchedule.EVERY_MONTH.displayValue,
+              value = PaymentSchedule.EVERY_MONTH.value,
+              checked = form.valueFor('paymentSchedule') === PaymentSchedule.EVERY_MONTH,
+              bold = true
+            ) }}
+          </fieldset>
+        </div>
       </div>
 
       {{ linkButton('Calculate length of repayment plan', 'action[calculatePaymentPlan]', 'button button-secondary calculateLengthOfRepayment') }}
