updated paymentPlanTable to show regular payments and frequency in different rows as per updated prototype

--- a/src/main/features/claimant-response/views/accept-payment-method.njk
+++ b/src/main/features/claimant-response/views/accept-payment-method.njk
@@ -20,6 +20,7 @@
           {{ paymentPlanTable(
             'paymentPlanTable',
             claim.response.paymentIntention.repaymentPlan.instalmentAmount,
+            claim.response.paymentIntention.repaymentPlan.paymentSchedule,
             claim.response.paymentIntention.repaymentPlan.firstPaymentDate,
             paymentPlan.getLastPaymentDate(),
             paymentPlan.getPaymentLength()
