--- a/src/main/features/claimant-response/views/macro/paymentPlanTable.njk
+++ b/src/main/features/claimant-response/views/macro/paymentPlanTable.njk
@@ -4,7 +4,7 @@
       <span class="visually-hidden">{{ t( 'Payment plan' ) }}</span>
     </legend>
     {{ row('Regular payments of', instalmentAmount | numeral) }}
-    {{ row('Frequency of payments', paymentFrequency | numeral) }}
+    {{ row('Frequency of payments', paymentSchedule | numeral) }}
     {{ row('Make the first payment on', firstPaymentDate | date) }}
     {{ row('Last payment on', lastPaymentOn | date) }}
     {{ row('Length of repayment plan', lengthOfPayment) }}
