Updates to abstract and concrete components to use new framework

--- a/src/main/common/components/ccj/views/paid-amount-summary.njk
+++ b/src/main/common/components/ccj/views/paid-amount-summary.njk
@@ -64,9 +64,9 @@
       </table>
     </div>
 
-    {#<div class="form-group">#}
-      {#<a class="button" href="{{nextPageUrl}}">{{ t('Continue') }}</a>#}
-    {#</div>#}
+    <div class="form-group">
+      <a class="button" href="{{nextPageUrl}}">{{ t('Continue') }}</a>
+    </div>
   </div>
 </div>
 {% endblock %}
